# cicd-demo

./: Dockerfile  Jenkinsfile  README.md  pyproject.toml
jenkins-code/jenkins/: docker-compose.yml
models/: iris_model.kl  iris_model.pkl
src/: app.py  train_model.py
test/: test_app.py  test_model.py
